--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
           <div class="flex-item flex-column">
             <h2>Yaxuan Yin</h2>
             <p class="text">
-              Phd Student <br>
+              PhD Student <br>
               University of Wisconsin-Madison in Information Science <br>
-              yin75@ wisc.edu<br>
+              yaxuan.yin@ wisc.edu<br>
               <!-- <a href="https://ivi.uva.nl" target="_blank">Informatics Institute</a><br>
               <a href="https://www.uva.nl/en" target="_blank">University of Amsterdam</a>, The Netherlands<br> -->
             </p>
