--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   <br>
                   In Proceedings of the ACM Conference on Computer‑Supported Cooperative Work and Social Computing (CSCW’24) Extended Abstract
                   <br>
-                  <a href="" target="_blank">Source</a>
+                  <a href="https://dl.acm.org/doi/10.1145/3678884.3681861" target="_blank">Source</a>
                   &nbsp;|&nbsp;
                   <a href="paper/CSCW24_Reddit.pdf" target="_blank">Full PDF</a>
                 </p>
