--- a/index.html
+++ b/index.html
@@ -182,6 +182,23 @@
                   <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
                 </p>
               </li>    
+
+              <li>
+                <p class="text-small-margin">
+                  Toward Teacher‐Centered AI Design: Exploring the Role of Pedagogical Values and Contextual Factors in K‐12 Teachers’ Perceptions of Responsible AI.
+                  <br>
+                  <b>Yaxuan Yin</b>, Shamya Karumbaiah, Ju Lim, Shona Acquaye, Sara Schwartz. 
+                  <br>
+                  In the 2025 International Conference on Computer‐Supported Collaborative Learning (CSCL’25)
+                  <br>
+                  <a href="" target="_blank">Source</a>
+                  &nbsp;&nbsp;|&nbsp;&nbsp;
+                  <a href="" target="_blank">Full PDF</a>
+                  <!-- &nbsp;&nbsp;|&nbsp;&nbsp; -->
+                  <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
+                </p>
+              </li>   
+              
             </ol> 
 
             <h2>Referred Posters, Works-in-Progress, and Workshop Paper</h2>
