--- a/index.html
+++ b/index.html
@@ -80,8 +80,14 @@
               <h2>News</h2>
               <div style="margin-bottom: 5px;">
                 <p style="margin: 0;">
+                  <span style="color: green; font-weight: bold;">Mar 2025</span>
+                  Our paper “Toward Teacher‐Centered AI Design: Exploring the Role of Pedagogical Values and Contextual Factors in K‐12 Teachers’ Perceptions of Responsible AI.” has been accepted for #CSCL2025 (Stay tuned for the camera-ready). Huge thanks to my amazing and supportive collaborators!
+                </p>
+              </div>
+              <div style="margin-bottom: 5px;">
+                <p style="margin: 0;">
                   <span style="color: green; font-weight: bold;">OCT 2024</span>
-                  I will be attending CSCW '24 to present our paper and extended abstract! See you in Costa Rica 🦜
+                  I will be attending CSCW 2024 to present our paper and extended abstract! See you in San José, Costa Rica 🦜
                 </p>
               </div>
               <div style="margin-bottom: 5px;">
@@ -94,7 +100,7 @@
               <div style="margin-bottom: 5px;">
                 <p style="margin: 0;">
                   <span style="color: green; font-weight: bold;">SEP 2024</span>
-                  Two full papers accepted by CSCW 2025, both as first author.
+                  Two full papers accepted to CSCW 2025, both as first author! Excited to present in Bergen, Norway 🇳🇴. Huge thanks to my advisor for the support!
                 </p>
               </div>
               
