--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div style="margin-bottom: 5px;">
                   <p style="margin: 0;">
                     <span style="color: green; font-weight: bold;">Nov 2023</span>
-                    My first-ever paper—and my first as first author—has been accepted to CSCW '24 after a long revision journey! Whew! 🎉 Huge thanks to my amazing mentee @Longjie (now a fantastic PhD student at UW!) and my advisor for their support and patience!
+                    My first-ever paper—and my first as first author—has been accepted to CSCW2024 after a long revision journey! Whew! 🎉 Huge thanks to my amazing mentee @Longjie (now a fantastic PhD student at UW!) and my advisor for their support and patience!
                   </p>
                 </div>
               </div>
