--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <div style="margin-bottom: 5px;">
                 <p style="margin: 0;">
                   <span style="color: green; font-weight: bold;">OCT 2024</span>
-                  I will be attending CSCW 2024 to present our paper and extended abstract! See you in San José, Costa Rica 🦜
+                  I will be attending CSCW2024 to present our <a href="paper/CSCW24_productivity_vs_equity.pdf" target="_blank">paper</a> and <a href="paper/CSCW24_Reddit.pdf" target="_blank">extended abstract</a>! See you in San José, Costa Rica 🦜
                 </p>
               </div>
               <div style="margin-bottom: 5px;">
@@ -100,7 +100,7 @@
               <div style="margin-bottom: 5px;">
                 <p style="margin: 0;">
                   <span style="color: green; font-weight: bold;">SEP 2024</span>
-                  Two full papers accepted to CSCW 2025, both as first author! Excited to present in Bergen, Norway 🇳🇴. Huge thanks to my advisor for the support!
+                  Two full papers accepted to CSCW2025, both as first author! Excited to present in Bergen, Norway 🇳🇴. Huge thanks to my advisor for the support!
                 </p>
               </div>
               
@@ -116,7 +116,7 @@
                 <div style="margin-bottom: 5px;">
                   <p style="margin: 0;">
                     <span style="color: green; font-weight: bold;">Nov 2023</span>
-                    My first-ever paper—and my first as first author—has been accepted to CSCW2024 after a long revision journey! Whew! 🎉 Huge thanks to my amazing mentee @Longjie (now a fantastic PhD student at UW!) and my advisor for their support and patience!
+                    My first-ever paper—and my first as first author—has been accepted to CSCW2024 after a long revision journey! Whew! 🎉 Huge thanks to my amazing mentee @Longjie (now a fantastic PhD student at UW) and my great advisor for their support and patience.
                   </p>
                 </div>
               </div>
