--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   <br>
                   <a href="" target="_blank">Source</a>
                   &nbsp;&nbsp;|&nbsp;&nbsp;
-                  <a href="" target="_blank">Full PDF</a>
+                  <a href="paper/CSCW2025_Beyond_GeoHCI.pdf" target="_blank">Full PDF</a>
                   <!-- &nbsp;&nbsp;|&nbsp;&nbsp; -->
                   <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
                 </p>
