--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
               👋 Hi, I'm Yaxuan
               <br>
               I am a PhD candidate in Information Science at the <a href="https://collab.ischool.wisc.edu/" target="_blank">Collaborative Computing Group (MadCollab) </a> at the University of Wisconsin-Madison, where 
-              I am advised by <a href="https://ischool.wisc.edu/staff/thebault-spieker-jacob/" target="_blank"> Dr. Jacob Thebault-Spieker</a>. I previously earned my Master's degree at New York University, specializing in urban informatics and data science. My research focuses on 
-              social computing and human-computer interaction, with a particular interest in studying and evaluating disparities in socio-technical systems (e.g., Wikipedia, OpenStreetMap, Airbnb).
+              I am advised by <a href="https://ischool.wisc.edu/staff/thebault-spieker-jacob/" target="_blank"> Dr. Jacob Thebault-Spieker</a>. My research lies at the intersection of social computing and human-computer interaction. I study disparities in upstream data production within socio-technical systems—such as Wikipedia, OpenStreetMap, and Airbnb—focusing on cultural and geographical contexts. On the downstream side, I investigate how these upstream disparities influence language model–powered applications and explore computational interventions to promote equity. Prior to my PhD, I earned a Master’s degree in Urban Informatics and Data Science from New York University.
 
               <h2>News</h2>
               <div style="margin-bottom: 5px;">
