--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   <br>
                   In the 2025 International Conference on Computer‐Supported Collaborative Learning (CSCL’25)
                   <br>
-                  <a href="" target="_blank">Source</a>
+                  <a href="paper/CSCW24_RAI.pdf" target="_blank">Source</a>
                   &nbsp;&nbsp;|&nbsp;&nbsp;
                   <a href="" target="_blank">Full PDF</a>
                   <!-- &nbsp;&nbsp;|&nbsp;&nbsp; -->
