--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                   <br>
                   In the 2025 International Conference on Computer‐Supported Collaborative Learning (CSCL’25)
                   <br>
-                  <a href="paper/CSCW24_RAI.pdf" target="_blank">Source</a>
+                  <a href="" target="_blank">Source</a>
                   &nbsp;&nbsp;|&nbsp;&nbsp;
-                  <a href="" target="_blank">Full PDF</a>
+                  <a href="paper/CSCL25_RAI.pdf" target="_blank">Full PDF</a>
                   <!-- &nbsp;&nbsp;|&nbsp;&nbsp; -->
                   <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
                 </p>
