--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <div style="margin-bottom: 5px;">
                 <p style="margin: 0;">
                   <span style="color: green; font-weight: bold;">Mar 2025</span>
-                  Our paper “Toward Teacher‐Centered AI Design: Exploring the Role of Pedagogical Values and Contextual Factors in K‐12 Teachers’ Perceptions of Responsible AI.” has been accepted for #CSCL2025 (Stay tuned for the camera-ready). Huge thanks to my amazing and supportive collaborators!
+                  Our paper <a href="paper/CSCL25_RAI.pdf" target="_blank">paper</a> “Toward Teacher‐Centered AI Design: Exploring the Role of Pedagogical Values and Contextual Factors in K‐12 Teachers’ Perceptions of Responsible AI” has been accepted for #CSCL2025. Huge thanks to my amazing and supportive collaborators!
                 </p>
               </div>
               <div style="margin-bottom: 5px;">
