--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                   <br>
                   <b>Yaxuan Yin</b>, Shamya Karumbaiah, Ju Lim, Shona Acquaye, Sara Schwartz. 
                   <br>
-                  In the 2025 International Conference on Computer‐Supported Collaborative Learning (CSCL’25)
+                  In Proceedings of the 19th International Conference on Computer Supported Collaborative Learning (CSCL'25).
                   <br>
                   <a href="" target="_blank">Source</a>
                   &nbsp;&nbsp;|&nbsp;&nbsp;
@@ -203,6 +203,23 @@
                   <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
                 </p>
               </li>   
+
+              <li>
+                <p class="text-small-margin">
+                  AIBAT: AI Behavior Analysis Tool for Teacher-Driven Contextual Evaluation of Language Models in Education.
+                  <br>
+                  Shamya Karumbaiah, <b>Yaxuan Yin</b>, Aayush Bharadwaj. 
+                  <br>
+                  In Proceedings of the 26th International Conference on Artificial Intelligence in Education (AIED'25)
+                  <br>
+                  <a href="" target="_blank">Source</a>
+                  &nbsp;&nbsp;|&nbsp;&nbsp;
+                  <a href=" " target="_blank">Full PDF</a>
+                  <!-- &nbsp;&nbsp;|&nbsp;&nbsp; -->
+                  <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
+                </p>
+              </li>   
+
               
             </ol> 
 
