--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
               <div style="margin-bottom: 5px;">
                 <p style="margin: 0;">
                   <span style="color: green; font-weight: bold;">Mar 2025</span>
+              Excited to share that our paper, “AIBAT: AI Behavior Analysis Tool for Teacher-Driven Contextual Evaluation of Language Models in Education” has been accepted to #AIED2025! Grateful for the team's hard work and thrilled to see it recognized.
+                </p>
+              </div>
+              <div style="margin-bottom: 5px;">
+                <p style="margin: 0;">
+                  <span style="color: green; font-weight: bold;">Mar 2025</span>
                   Our <a href="paper/CSCL25_RAI.pdf" target="_blank">paper</a> “Toward Teacher‐Centered AI Design: Exploring the Role of Pedagogical Values and Contextual Factors in K‐12 Teachers’ Perceptions of Responsible AI” has been accepted for #CSCL2025. Huge thanks to my amazing and supportive collaborators!
                 </p>
               </div>
