--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
               <div style="margin-bottom: 5px;">
                 <p style="margin: 0;">
                   <span style="color: green; font-weight: bold;">Apr 2025</span>
+              Excited to share that our paper, “Responsible AI in Education: Understanding Teachers’ Priorities and Contextual Challenges” has been accepted to #FAccT! Honored to contribute to the growing dialogue on values, context, and ethics in AI.
+                </p>
+              </div>
+              <div style="margin-bottom: 5px;">
+                <p style="margin: 0;">
+                  <span style="color: green; font-weight: bold;">Apr 2025</span>
               Excited to share that our paper, “AIBAT: AI Behavior Analysis Tool for Teacher-Driven Contextual Evaluation of Language Models in Education” has been accepted to #AIED2025! Grateful for the team's hard work and thrilled to see it recognized.
                 </p>
               </div>
