--- a/index.html
+++ b/index.html
@@ -233,8 +233,24 @@
                   <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
                 </p>
               </li>   
-
               
+              <li>
+                <p class="text-small-margin">
+                  Responsible AI in Education: Understanding Teachers’ Priorities and Contextual Challenges.
+                  <br>
+                  <b>Yaxuan Yin</b>, Shamya Karumbaiah, Shona Acquaye. 
+                  <br>
+                  In Proceedings of ACM Conference on Fairness, Accountability, and Transparency (FAccT’25)
+                  <br>
+                  <a href="" target="_blank">Source</a>
+                  &nbsp;&nbsp;|&nbsp;&nbsp;
+                  <a href=" " target="_blank">Full PDF</a>
+                  <!-- &nbsp;&nbsp;|&nbsp;&nbsp; -->
+                  <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
+                </p>
+              </li>   
+
+      
             </ol> 
 
             <h2>Referred Posters, Works-in-Progress, and Workshop Paper</h2>
