--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div style="margin-bottom: 5px;">
           <p style="margin: 0;">
             <span style="color: green; font-weight: bold;">Apr 2025</span>
-            Excited to share that our paper, “Responsible AI in Education: Understanding Teachers’ Priorities and Contextual Challenges” has been accepted to #FAccT! Honored to contribute to the growing dialogue on values, context, and ethics in AI.
+            Excited to share that our paper, “Responsible AI in Education: Understanding Teachers’ Priorities and Contextual Challenges” has been accepted to #FAccT2025! Honored to contribute to the growing dialogue on values, context, and ethics in AI.
           </p>
         </div>
         
