--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                   <br>
                   In Proceedings of the ACM Conference on Computer‑Supported Cooperative Work and Social Computing (CSCW’25)
                   <br>
-                  <a href="#" target="_blank">Source</a>
+                  <a href="https://dl.acm.org/doi/10.1145/3710916" target="_blank">Source</a>
                   &nbsp;|&nbsp;
                   <a href="paper/CSCW25_The Effect of Population Density.pdf" target="_blank">Full PDF</a>
                 </p>
