--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                   <br>
                   In Proceedings of ACM Conference on Fairness, Accountability, and Transparency (FAccT’25)
                   <br>
-                  <a href="" target="_blank">Source</a>
+                  <a href="https://doi.org/10.1145/3715275.3732176" target="_blank">Source</a>
                   &nbsp;&nbsp;|&nbsp;&nbsp;
                   <a href="paper/FAccT2025_RAI.pdf" target="_blank">Full PDF</a>
                   <!-- &nbsp;&nbsp;|&nbsp;&nbsp; -->
