--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                   <br>
                   In Proceedings of the 19th International Conference on Computer Supported Collaborative Learning (CSCL'25).
                   <br>
-                  <a href="" target="_blank">Source</a>
+                  <a href="https://doi.org/10.22318/cscl2025.817482" target="_blank">Source</a>
                   &nbsp;&nbsp;|&nbsp;&nbsp;
                   <a href="paper/CSCL25_RAI.pdf" target="_blank">Full PDF</a>
                   <!-- &nbsp;&nbsp;|&nbsp;&nbsp; -->
