--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
               <li>
                 <p class="text-small-margin">
-                  Toward Teacher‐Centered AI Design: Exploring the Role of Pedagogical Values and Contextual Factors in K‐12 Teachers’ Perceptions of Responsible AI. [Best Papers Nominees] 
+                  Toward Teacher‐Centered AI Design: Exploring the Role of Pedagogical Values and Contextual Factors in K‐12 Teachers’ Perceptions of Responsible AI. *Best Papers Nominees* 
                   <br>
                   <b>Yaxuan Yin</b>, Shamya Karumbaiah, Ju Lim, Shona Acquaye, Sara Schwartz. 
                   <br>
