--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
               <li>
                 <p class="text-small-margin">
-                  AIBAT: AI Behavior Analysis Tool for Teacher-Driven Contextual Evaluation of Language Models in Education. [Best Papers Nominees] 
+                  AIBAT: AI Behavior Analysis Tool for Teacher-Driven Contextual Evaluation of Language Models in Education. *Best Papers Nominees*
                   <br>
                   Shamya Karumbaiah, <b>Yaxuan Yin</b>, Aayush Bharadwaj. 
                   <br>
