--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
               <li>
                 <p class="text-small-margin">
-                  Toward Teacher‐Centered AI Design: Exploring the Role of Pedagogical Values and Contextual Factors in K‐12 Teachers’ Perceptions of Responsible AI. *Best Papers Nominees* 
+                  Toward Teacher‐Centered AI Design: Exploring the Role of Pedagogical Values and Contextual Factors in K‐12 Teachers’ Perceptions of Responsible AI. 🏅Best Papers Nominees 
                   <br>
                   <b>Yaxuan Yin</b>, Shamya Karumbaiah, Ju Lim, Shona Acquaye, Sara Schwartz. 
                   <br>
@@ -232,7 +232,7 @@
 
               <li>
                 <p class="text-small-margin">
-                  AIBAT: AI Behavior Analysis Tool for Teacher-Driven Contextual Evaluation of Language Models in Education. *Best Papers Nominees*
+                  AIBAT: AI Behavior Analysis Tool for Teacher-Driven Contextual Evaluation of Language Models in Education. 🏅Best Papers Nominees
                   <br>
                   Shamya Karumbaiah, <b>Yaxuan Yin</b>, Aayush Bharadwaj. 
                   <br>
