--- a/index.html
+++ b/index.html
@@ -73,9 +73,12 @@
             <p class="text">
               👋 Hi, I'm Yaxuan
               <br>
-              I am a PhD candidate in Information Science at the <a href="https://collab.ischool.wisc.edu/" target="_blank">Collaborative Computing Group (MadCollab) </a> at the University of Wisconsin-Madison, where 
-              I am advised by <a href="https://ischool.wisc.edu/staff/thebault-spieker-jacob/" target="_blank"> Dr. Jacob Thebault-Spieker</a>. My research lies at the intersection of social computing and human-computer interaction. I study disparities in upstream data production within socio-technical systems—such as Wikipedia, OpenStreetMap, and Airbnb—focusing on cultural and geographical contexts. On the downstream side, I investigate how these upstream disparities influence language model–powered applications and explore computational interventions to promote equity. Prior to my PhD, I earned a Master’s degree in Urban Informatics and Data Science from New York University.
+              I am a Ph.D. candidate in Information Science at the University of Wisconsin–Madison, where I work with the <a href="https://collab.ischool.wisc.edu/" target="_blank">Collaborative Computing Group (MadCollab) </a> under the guidance of <a href="https://ischool.wisc.edu/staff/thebault-spieker-jacob/" target="_blank"> Dr. Jacob Thebault-Spieker</a>. My research focuses on data production in socio-technical systems such as Wikipedia, OpenStreetMap, and Airbnb, examining how cultural and geographical contexts shape community dynamics and data production in these systems.
 
+              I also collaborate with <a href="https://shamya.github.io/" target="_blank">Dr. Shamya Karumbaiah</a> at the Responsible AI for Learning (TRAIL) Lab, where we explore the role of large language models (LLMs) in education. Our work aims to empower educators to audit bias, adopt AI tools responsibly, and integrate them effectively into learning environments.
+
+              Prior to my Ph.D., I earned a Master’s degree in Urban Informatics and Data Science from New York University.
+           
 
         <h2>News</h2>
         
