--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <p class="text-small-margin">
                   Toward Teacher‐Centered AI Design: Exploring the Role of Pedagogical Values and Contextual Factors in K‐12 Teachers’ Perceptions of Responsible AI. 
                   <br>
-                  🏅Best Papers Nominees 
+                  🏅Best Paper Nomination 
                   <br>
                   <b>Yaxuan Yin</b>, Shamya Karumbaiah, Ju Lim, Shona Acquaye, Sara Schwartz. 
                   <br>
@@ -241,7 +241,7 @@
                 <p class="text-small-margin">
                   AIBAT: AI Behavior Analysis Tool for Teacher-Driven Contextual Evaluation of Language Models in Education. 
                   <br>
-                  🏅Best Papers Nominees
+                  🏅Best Paper Nomination
                   <br>
                   Shamya Karumbaiah, <b>Yaxuan Yin</b>, Aayush Bharadwaj. 
                   <br>
