--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 
             <ol class="publication A-list"> 
 
+
               <li>
                 <p class="text-small-margin">
                   Productivity or Equality? Tradeoffs in Volunteer Microtasking in Humanitarian OpenStreetMap. 
@@ -270,6 +271,22 @@
                   <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
                 </p>
               </li>   
+              
+              <li>
+                <p class="text-small-margin">
+                  Beyond Access: Contextualizing the Benefits of Broadband through Contributor Dynamics on Wikipedia.
+                  <br>
+                  <strong>Yaxuan Yin</strong>, Jacob Thebault-Spieker.
+                  <br>
+                  In Proceedings of the 2026 CHI Conference on Human Factors in Computing Systems (CHI’26)
+                  <br>
+                  <a href="">Source</a>
+                  &nbsp;&nbsp;|&nbsp;&nbsp;
+                  <a href="" target="_blank">Full PDF</a>
+                  <!-- &nbsp;&nbsp;|&nbsp;&nbsp; -->
+                  <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
+                </p>
+              </li>
 
       
             </ol> 
