--- a/index.html
+++ b/index.html
@@ -308,6 +308,18 @@
                   <a href="paper/CSCW24_Reddit.pdf" target="_blank">Full PDF</a>
                 </p>
               </li>
+              
+              <li>
+                <p class="text-small-margin">
+                  Redefining Value: Wikipedia’s Role in Dataset Governance for Foundation Models
+                  <br>
+                  <b>Yaxuan Yin</b>.
+                  <br>
+                  Workshop at the ACM Conference on Computer-Supported Cooperative Work and Social Computing (CSCW’25)
+                  <br>
+                  <a href="paper/CSCW25_Value_Workshop.pdf" target="_blank">Full PDF</a>
+                </p>
+              </li>
             </ol>
 
             <h2>Awards, Fellowships, & Grants</h2>
