--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
                   <br>
                   In Proceedings of the 2026 CHI Conference on Human Factors in Computing Systems (CHI’26)
                   <br>
-                  <a href="">Source</a>
-                  &nbsp;&nbsp;|&nbsp;&nbsp;
-                  <a href="" target="_blank">Full PDF</a>
+                  <!-- <a href="">Source</a>
+                  &nbsp;&nbsp;|&nbsp;&nbsp; -->
+                  <a href="paper/CHI2026_Broadband.pdf" target="_blank">Full PDF</a>
                   <!-- &nbsp;&nbsp;|&nbsp;&nbsp; -->
                   <!-- <a href="https://github.com/windx0303/CODA-19" target="_blank">Code and Data</a> -->
                 </p>
