--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="content-table flex-column">
             <div class="flex-row">
               <div class="flex-item flex-column">
-                <img class="image" id="me" src="img/me.jpg" style="width: 150px; height: 150px; object-fit: cover; border-radius: 5px;">
+                <img class="image" id="me" src="img/7741771957873_.pic.jpg" style="width: 150px; height: 150px; object-fit: cover; border-radius: 5px;">
               </div>
           <div class="flex-item flex-column">
             <h2>Yaxuan (Shelly) Yin</h2>
